--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project creates a Blockchain application to store data into the blocks",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write **/*.js"
   },
